feat: add get block API (#9)
